cleans up file names, fixes page meta

--- a/docs/_includes/meta.html
+++ b/docs/_includes/meta.html
@@ -1,19 +1,41 @@
-{% if page.title != "Introduction" %}
+{% comment %}
+ % This include renders a "meta section" to a page. It lists the associated source file(s):
+ % either a comma-seperated list from an optional array found in the page's frontmatter (page.srcfiles)
+ % or just a single file (default, when page.srcfiles is undefined).
+ % In addition, this include also renders a handy "edit this page"-button, linking to the edit page
+ % directly on github.
+{% endcomment %}
+
+{% if page.title != "Introduction" and page.group != "start" %}
+    {% assign githubSrcUrl = "https://github.com/yoshino-digital/yoi/blob/master/src" %}
     <h2>Source Files</h2>
-    <p>
-        {% if page.group == "actions" %}
-            <a href="https://github.com/yoshino-digital/yoi/blob/master/src/js/actions/{{ page.title | downcase }}.js">/src/js/actions/{{ page.title | downcase }}.js</a>
-        {% elsif page.group == "behaviours" %}
-            <a href="https://github.com/yoshino-digital/yoi/blob/master/src/js/behaviours/{{ page.title | downcase }}.js">/src/js/behaviours/{{ page.title | downcase }}.js</a>
-        {% elsif page.group == "components" %}
-            <a href="https://github.com/yoshino-digital/yoi/blob/master/src/{{ page.permalink }}/">/src/{{ page.permalink }}/</a><br />
-        {% elsif page.group == "utilities" %}
-            <a href="https://github.com/yoshino-digital/yoi/blob/master/src/less/utilities/{{ page.title | downcase }}.less">/src/less/utilities/{{ page.title | downcase }}.less</a>
-        {% endif %}
-    </p>
+    {% if page.srcfiles %}
+        <p>
+            {% for file in page.srcfiles %}
+                {% if page.group == "actions" or page.group == "behaviours" %}
+                    <a href="{{ githubSrcUrl }}/js/{{ page.group }}/{{ file }}">{{ file }}</a>
+                {% elsif page.group == "components" %}
+                    <a href="{{ githubSrcUrl }}/{{ page.permalink }}/{{ file }}">{{ file }}/</a>
+                {% elsif page.group == "utilities" %}
+                    <a href="{{ githubSrcUrl }}/less/{{ page.group }}/{{ file }}">{{ file }}</a>
+                {% endif %}
+                {% if forloop.last == false %}, {% endif %}
+            {% endfor %}
+        </p>
+    {% else %}
+        <p>
+            {% if page.group == "actions" or page.group == "behaviours" %}
+                <a href="{{ githubSrcUrl }}/js/{{ page.permalink }}.js">{{ page.permalink }}.js</a>
+            {% elsif page.group == "components" %}
+                <a href="{{ githubSrcUrl }}/{{ page.permalink }}/">{{ page.permalink }}/</a>
+            {% elsif page.group == "utilities" %}
+                <a href="{{ githubSrcUrl }}/less/{{ page.permalink }}.less">{{ page.permalink }}.less</a>
+            {% endif %}
+        </p>
+    {% endif %}
 {% endif %}
-<div class="b-t m-t-4 p-t-4 al-r">
-    <a class="btn btn--large btn--subtle" href="https://github.com/yoshino-digital/yoi/edit/master/docs/_pages{{ page.url }}{% if page.title == "Introduction" %}index{% endif %}.md">
+<div class="b-t m-t-8 p-t-4 al-r">
+    <a class="btn btn--large btn--subtle" href="https://github.com/yoshino-digital/yoi/edit/master/docs/_pages/{{ page.permalink }}{% if page.title == "Introduction" %}index{% endif %}.md">
         <img class="icon" src="http://cdn.yoshino.digital/svg.php?id=icon-019-s" yoi-icon />
         <span>Edit this page</span>
     </a>
