--- a/src/less/utilities/jsFallback.less
+++ b/src/less/utilities/jsFallback.less
@@ -1,4 +1,4 @@
-/** jsFallback.less */
+/** jsfallback.less */
 
 .js   .js-fallback { display: none !important; }
 .noJs .js-only     { display: none !important; }
