--- a/src/less/utilities/opacity-interactive.less
+++ b/src/less/utilities/opacity-interactive.less
@@ -1,4 +1,4 @@
-/** opacity-interactve.less */
+/** opacity-interactive.less */
 
 .hvr--opacity-full:hover { opacity: 1 !important; }
 .hvr--opacity-9:hover    { opacity: .9 !important; }
