--- a/src/less/utilities/opacity-base.less
+++ b/src/less/utilities/opacity-base.less
@@ -1,4 +1,4 @@
-/** opacity-base */
+/** opacity-base.less */
 
 .opacity-full { opacity: 1 !important; }
 .opacity-9    { opacity: .9 !important; }
