cleans up meta links

--- a/docs/_includes/menu-sub.html
+++ b/docs/_includes/menu-sub.html
@@ -1,18 +1,18 @@
-{% assign urlLastChar = page.url | slice: -1 1 %}
 <ul class="linkList linkList--large bg-transparent b-0 br-0">
     {% for group in site.data.sitemap %}
         <li class="linkList__item">
             <a class="linkList__link fw-bold" href="{{ site.github.url }}/{{ group.first }}/">{{ group.first | capitalize }}</a>
         </li>
         {% if page.group == group.first %}
-            {% for pageName in site.data.sitemap[page.group] %}
-                {% assign menuLabel    = pageName | replace: "_", " " %}
-                {% assign currentPage  = page.url | split: "/" | last | replace: "_", " " %}
-                {% assign thisPageName = menuLabel | downcase %}
-                <li class="linkList__item{% if (currentPage == thisPageName) or (urlLastChar == "/" and menuLabel contains "index") %} is--active{% endif %}">
-                    <a class="linkList__link tt-cp" href="{{ site.github.url }}/{{ page.group }}/{{ pageName | downcase | append: ".html" }}">{% if menuLabel contains "index" %}Introduction{% else %}{{ menuLabel }}{% endif %}</a>
+            {% for thisPage in site.data.sitemap[page.group] %}
+                {% assign menuLabel   = thisPage | capitalize %}
+                {% assign currentPage = page.url | split: "/" | last | remove: " " %}
+                {% assign pageName    = thisPage | remove: " " %}
+                <li class="linkList__item {% if (currentPage == pageName) or (currentPage == page.group and thisPage == "index") %}is--active{% endif %}">
+                    <a class="linkList__link tt-cp" href="{{ site.github.url }}/{{ page.group }}/{{ pageName }}.html">{% if pageName == "index" %}Introduction{% else %}{{ menuLabel }}{% endif %}</a>
                 </li>
             {% endfor %}
         {% endif %}
     {% endfor %}
 </ul>
+
