--- a/src/less/utilities/grid-base.less
+++ b/src/less/utilities/grid-base.less
@@ -95,7 +95,7 @@
     }
 }
 
-.flex-aligncontentStart { align-content: flex-start !important; }
+.flex-alignContentStart { align-content: flex-start !important; }
 
 .flex-alignContentEnd { align-content: flex-end !important; }
 .flex-alignContentEnd {
