--- a/docs/_includes/footer-meta.html
+++ b/docs/_includes/footer-meta.html
@@ -35,7 +35,7 @@
     {% endif %}
 {% endif %}
 <div class="b-t m-t-8 p-t-4 al-r">
-    <a class="btn btn--large btn--subtle" href="https://github.com/yoshino-digital/yoi/edit/master/docs/_pages/{{ page.permalink }}{% if page.title == "Introduction" %}index{% endif %}.md">
+    <a class="btn btn--medium btn--subtle" href="https://github.com/yoshino-digital/yoi/edit/master/docs/_pages/{{ page.permalink }}{% if page.title == "Introduction" %}index{% endif %}.md">
         <img class="icon" src="http://cdn.yoshino.digital/svg.php?id=icon-019-s" yoi-icon />
         <span>Edit this page</span>
     </a>
