--- a/docs/_layouts/base.html
+++ b/docs/_layouts/base.html
@@ -23,30 +23,38 @@
     {% endif %}
     <body class="noJs" yoi-environment="desktop" {{ pageRewind }} {{ scrollKeys }} {{ scrollProgress }} >
         <script>document.body.className='js';</script>
-        <header class="m-b-4 p-t-8 p-b-4">
-            <div class="center flexGrid flex-alignCenter flex-noWrap">
-                <img class="h-6 p-r-6" src="{{ site.github.url }}/assets/img/yoi-logo.svg" />
-                <span class="fs-2 l--fs-3 tc-main-15">YOI – the Yoshino Frontend Component Library</span>
+        <div class="center flexGrid p-tb-2 l--m-b-8">
+            <div class="w-1-4 m--w-2-3 flex-alignStart">
+                <a href="{{ site.github.url }}/">
+                    <img class="h-4 m--h-6 m-tb-1 m--m-tb-2" src="{{ site.github.url }}/assets/img/yoi-logo.svg" />
+                </a>
             </div>
-        </header>
-        <div class="center al-r l--hidden">
-            <a href="#menu" class="btn btn--flat btn--light btn--large" yoi-action="ScrollTo:#menu;">
-                <img class="icon" src="http://cdn.yoshino.digital/svg.php?id=icon-067-s" yoi-icon />
-                <span>Menu</span>
-            </a>
+            <div class="w-3-4 m--w-1-3 flex-alignEnd">
+                <div class="m-t-1">
+                    <a href="https://github.com/yoshino-digital/yoi/" class="btn btn--medium btn--subtle">GitHub</a>
+                    <a href="https://github.com/yoshino-digital/yoi/releases/latest" class="btn btn--medium btn--subtle">
+                        <img class="icon" src="http://cdn.yoshino.digital/svg.php?id=icon-071-s" yoi-icon />
+                        <span>Download</span>
+                    </a>
+                    <a href="#menu" class="btn btn--medium btn--flat btn--dark m-l-2 l--hidden" yoi-action="ScrollTo:#menu;">
+                        <span class="hidden">Menu</span>
+                        <img class="icon" src="http://cdn.yoshino.digital/svg.php?id=icon-067-s" yoi-icon />
+                    </a>
+                </div>
+            </div>
         </div>
         <div class="center flexGrid">
-            <nav id="menu" class="w-1-1 l--w-1-5 m-t-6 flex-2 l--flex-1">
-                {% include menu-sub.html %}
+            <nav id="menu" class="w-1-1 l--w-1-5 m-t-9 flex-2 l--flex-1">
+                {% include menu-main.html %}
             </nav>
             <article class="article w-1-1 l--w-4-5 l--p-l-10 flex-1 l--flex-2">
                 {{ content }}
-                {% include meta.html %}
+                {% include footer-meta.html %}
             </article>
         </div>
         <footer class="center flexGrid tc-gray-18 m-tb-15">
             <div class="w-1-2">YOI – the Yoshino Frontend Component Library.</div>
-            <div class="w-1-2 al-r">&copy; Yoshino.digital GmbH</div>
+            <div class="w-1-2 al-r"><a href="http://yoshino.digital">Yoshino.digital GmbH</a></div>
         </footer>
         <script src="{{ site.github.url }}/assets/js/jquery.min.js"></script>
         <script src="{{ site.github.url }}/js/documentation.js"></script>
