--- a/src/components/button/button.less
+++ b/src/components/button/button.less
@@ -53,7 +53,7 @@
 
         filter: drop-shadow(0 1px 0 @color-main-25);
 
-        svg circle, svg ellipse, svg path, svg polygon {
+        circle, ellipse, path, polygon {
             fill: @color-main-8;
         }
 
@@ -206,7 +206,7 @@
 
             filter: drop-shadow(0 -1px 0 @color-main-7);
 
-            svg circle, svg ellipse, svg path, svg polygon {
+            circle, ellipse, path, polygon {
                 fill: @color-main-25;
             }
 
@@ -250,7 +250,7 @@
 
             filter: drop-shadow(0 1px 0 @color-attention-22);
 
-            svg circle, svg ellipse, svg path, svg polygon {
+            circle, ellipse, path, polygon {
                 fill: @color-attention-8;
             }
 
@@ -294,7 +294,7 @@
 
             filter: drop-shadow(0 1px 0 @color-negative-22);
 
-            svg circle, svg ellipse, svg path, svg polygon {
+            circle, ellipse, path, polygon {
                 fill: @color-negative-6;
             }
 
@@ -340,7 +340,7 @@
 
             filter: drop-shadow(0 1px 0 @color-positive-23);
 
-            svg circle, svg ellipse, svg path, svg polygon {
+            circle, ellipse, path, polygon {
                 fill: @color-positive-8;
             }
 
@@ -414,7 +414,7 @@
         text-shadow: none;
 
         .icon {
-            svg circle, svg ellipse, svg path, svg polygon {
+            circle, ellipse, path, polygon {
                 fill: @color-main-10;
             }
         }
@@ -443,7 +443,7 @@
         text-shadow: none;
 
         .icon {
-            svg circle, svg ellipse, svg path, svg polygon {
+            circle, ellipse, path, polygon {
                 fill: @color-main-25;
             }
         }
@@ -472,7 +472,7 @@
         text-shadow: none;
 
         .icon {
-            svg circle, svg ellipse, svg path, svg polygon {
+            circle, ellipse, path, polygon {
                 fill: @color-attention-8;
             }
         }
@@ -502,7 +502,7 @@
         text-shadow: none;
 
         .icon {
-            svg circle, svg ellipse, svg path, svg polygon {
+            circle, ellipse, path, polygon {
                 fill: @color-negative-5;
             }
         }
@@ -532,7 +532,7 @@
         text-shadow: none;
 
         .icon {
-            svg circle, svg ellipse, svg path, svg polygon {
+            circle, ellipse, path, polygon {
                 fill: @color-positive-5;
             }
         }
@@ -575,7 +575,7 @@
 
         filter: none;
 
-        svg circle, svg ellipse, svg path, svg polygon {
+        circle, ellipse, path, polygon {
             fill: @color-main-20;
         }
 
@@ -622,7 +622,7 @@
         color: @color-white;
 
         .icon {
-            svg circle, svg ellipse, svg path, svg polygon {
+            circle, ellipse, path, polygon {
                 fill: @color-white;
             }
         }
@@ -646,7 +646,7 @@
         color: @color-main-9;
 
         .icon {
-            svg circle, svg ellipse, svg path, svg polygon {
+            circle, ellipse, path, polygon {
                 fill: @color-main-9;
             }
         }
@@ -670,7 +670,7 @@
         color: @color-attention-15;
 
         .icon {
-            svg circle, svg ellipse, svg path, svg polygon {
+            circle, ellipse, path, polygon {
                 fill: @color-attention-15;
             }
         }
@@ -695,7 +695,7 @@
         color: @color-negative-18;
 
         .icon {
-            svg circle, svg ellipse, svg path, svg polygon {
+            circle, ellipse, path, polygon {
                 fill: @color-negative-18;
             }
         }
@@ -720,7 +720,7 @@
         color: @color-positive-15;
 
         .icon {
-            svg circle, svg ellipse, svg path, svg polygon {
+            circle, ellipse, path, polygon {
                 fill: @color-positive-15;
             }
         }
